# s7app1

./: .gitignore  CERT.cer  CMakeLists.txt  README.md  gei761.sln  init.sh
client/: CClient.cpp  CClient.h  CMakeLists.txt  CTlsClient.cpp  CTlsClient.h  client.cpp  client.vcproj  client.vcxproj  makefile
openssl-1.0.0l/include/openssl/: opensslconf.h  ssl.h
openssl-1.0.0l/lib/: ssleay32.lib
outilsOpenSsl/: COutilsOpenSsl.cpp  COutilsOpenSsl.h  outilsOpenSsl.vcproj  outilsOpenSsl.vcxproj
serveur/: .release_time  CMakeLists.txt  CServeur.cpp  CServeur.h  CTlsServeur.cpp  CTlsServeur.h  makefile  serveur  serveur.cpp  serveur.vcproj  serveur.vcxproj
